[gd_scene load_steps=9 format=2]

[ext_resource path="res://objects/BaseObject.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/level_exit1.png" type="Texture" id=2]
[ext_resource path="res://sprites/level_exit2.png" type="Texture" id=3]
[ext_resource path="res://objects/LevelTransporter.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 15.0

[node name="LevelTransporter" instance=ExtResource( 1 )]
collision_mask = 0
script = ExtResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="." index="2"]
frames = SubResource( 1 )

[node name="Sprite2" type="AnimatedSprite" parent="." index="3"]
frames = SubResource( 3 )

[node name="PlayerDetector" type="Area2D" parent="." index="4"]
collision_layer = 0
collision_mask = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector" index="0"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="." index="5"]
one_shot = true
autostart = true

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
